# shoebox

./: .gitignore  README.md  _config.yml  about.md  build-linux  build-mac  index.html  index.md  markdown.md  shoe.bat  shoebox-linux  shoebox-mac  shoebox-win.bat  shoebox.cabal
_posts/: 2017-03-29-welcome-to-jekyll.markdown  2017-03-30-Intro-Material-from-Harald.md  2017-03-30-created-new-repo.md  2017-30-03-Harald-Videos.md
backend/: shoebox.cabal  stack.yaml
backend/Main/: Main.hs
backend/Shoebox/: Basics.hs  Command.hs  Data.hs  Interface.hs  Parser.hs  QueryRules.hs  Response.hs  Translation.hs  TranslationRules.hs  Util.hs
backend/Test/: ShoeboxDataSpec.hs  ShoeboxParserSpec.hs  ShoeboxSampleDatabase.hs
backend/nix/: default.nix  release.nix  shell.nix
data/: frz.sbx
frontend/: .gitignore  bower.json  commands.js  index.js  main.js  package.json  response.js  webpack.config.js
frontend/components/: App.js  App.purs  CommandDispatcher.purs  DbSelect.js  DbSelect.purs  DbStore.purs  ListGroup.js  ShoeboxChild.purs  TabInterL.js  TabInterL.purs  TabQuery.js  TabQuery.purs  TabTest.js  TabTest.purs
frontend/css/: base.css
frontend/nix/: bower.json  nixpkgs.json  package.json  shell.nix
frontend/src/: Api.purs  Bootstrap.purs  GlossingPage.purs  Main.purs
lib/Shoebox/: Basics.hs  Data.hs  Interface.hs  Parser.hs
main/: GUI.hs  Main.hs  WebBackend.hs
scripts/: build.lua
sinopia/: Commands.hs  Commands.js  Response.hs  Response.js  command_hs.tmpl  commands.sp  commands_js.tmpl  response.sp  response_hs.tmpl  response_js.tmpl
test/: ShoeboxSpec.hs
