name:                shoebox
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Frankfurt HUG
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Shoebox.Parser, Shoebox.Data, Shoebox.Basics, Shoebox.Interface
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , text
                     , parsec
                     , bytestring
                     , aeson
                     , directory
                     , filepath
                     , strict
                     , split
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable shoe
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , shoebox
                     , text
                     , yesod
                     , shakespeare
                     , aeson
                     , directory
                     , filepath
                     , strict
                     , split
                     , containers
  other-modules:       WebBackend
  hs-source-dirs:      main
  default-language:    Haskell2010
  ghc-options:         -threaded

test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       shoebox,
                       hspec,
                       QuickCheck
  other-modules:       ShoeboxSpec, ShoeboxSampleDatabase
  default-language:    Haskell2010
