name:                shoebox
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Frankfurt HUG
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:       Shoebox.Parser, Shoebox.Data, Shoebox.QueryRules, Shoebox.Interface, Shoebox.Util, Shoebox.Command
  build-depends:       base >=4.9 && <4.10
                     , containers
                     , text
                     , parsec
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , directory
                     , filepath
                     , strict
                     , split
                     , cereal
                     , binary-serialise-cbor
                     , base64-bytestring
  hs-source-dirs:      .
  default-language:    Haskell2010

executable shoeB
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , unordered-containers
                     , shoebox >=  0.1 && <0.2
                     , vector
                     , bytestring
                     , text
                     , aeson
                     , base64-bytestring
                     , binary-serialise-cbor
  hs-source-dirs:      Main
  default-language:    Haskell2010
  ghc-options:         -threaded

test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      Test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       shoebox,
                       hspec,
                       QuickCheck
  other-modules:       ShoeboxDataSpec, ShoeboxParserSpec
  default-language:    Haskell2010
